--- a/dependency-lookup/pom.xml
+++ b/dependency-lookup/pom.xml
@@ -6,11 +6,10 @@
         <artifactId>thinking-in-spring</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ioc-container-overview</artifactId>
+    <artifactId>dependency-lookup</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
